[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/menu.gd" type="Script" id=1]
[ext_resource path="res://images/mainmenu.jpg" type="Texture" id=2]
[ext_resource path="res://resources/fonts/Roboto-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://scenes/HUBButtons.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=1]
size = 30
outline_color = Color( 1, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 25
font_data = ExtResource( 3 )

[node name="Root" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="fond-menuprincipale" type="Sprite" parent="."]
position = Vector2( 511.164, 300 )
scale = Vector2( 0.534162, 0.556315 )
z_index = -3
texture = ExtResource( 2 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 439.0
margin_top = 217.0
margin_right = 585.0
margin_bottom = 382.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_right = 146.0
margin_bottom = 42.0
alignment = 1

[node name="PlayButton" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 28.0
margin_right = 118.0
margin_bottom = 42.0
focus_mode = 0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.282353, 0.27451, 0.27451, 1 )
custom_colors/font_color_hover = Color( 0.282353, 0.27451, 0.27451, 0.478431 )
enabled_focus_mode = 0
text = "Jouer"
flat = true

[node name="CreditsButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 46.0
margin_right = 146.0
margin_bottom = 83.0
focus_mode = 0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.372549, 0.368627, 0.368627, 1 )
custom_colors/font_color_hover = Color( 0.372549, 0.368627, 0.368627, 0.784314 )
enabled_focus_mode = 0
text = "Cr√©dits"
flat = true

[node name="LeadButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 87.0
margin_right = 146.0
margin_bottom = 124.0
focus_mode = 0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.372549, 0.368627, 0.368627, 1 )
custom_colors/font_color_hover = Color( 0.372549, 0.368627, 0.368627, 0.784314 )
enabled_focus_mode = 0
text = "Classement"
flat = true

[node name="LeaveButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 128.0
margin_right = 146.0
margin_bottom = 165.0
focus_mode = 0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.372549, 0.368627, 0.368627, 1 )
custom_colors/font_color_hover = Color( 0.372549, 0.368627, 0.368627, 0.784314 )
enabled_focus_mode = 0
text = "Quitter"
flat = true

[node name="HUBButtons" parent="." instance=ExtResource( 4 )]
anchor_left = 0.0
anchor_right = 0.0
margin_left = 890.0
margin_right = 1022.0
alignment = 2
show_pause_button = false
